--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:630px">
-<p>A new line in our file!</p>
-<p>This line is here to show how merging works.</p>
+
+
 
 </body>
-</html>
+<!-- </html> -->
