--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ style="width:100%;max-width:960px"></div>
 <p>This brnach-1 is the first file in my new Git Repo.</p>
 <p>This is branch-2 the first file in my new Git Repo.</p>
 <p>Online git hub</p>
+  <p>Html-skeleton branch</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:630px">
 
 <p>branch-1</p>
